stylesheets/pages/home.scss
/*******************
Home Page
*******************/

.home-page {
  width: auto;
  margin:20px 0 ;
  padding: 0 5%;
  align-items: center;
  overflow: hidden;
}

.home-page a {
  text-decoration: none;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

/*******************
Keyframes
*******************/
@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }

.fade-in-bottom {
  margin: auto;
  width: 100%;
  -webkit-animation: fadeIn ease-in 1;
  -moz-animation: fadeIn ease-in 1;
  animation: fadeIn ease-in 1;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-duration: 1.5s;
  -moz-animation-duration: 1.5s;
  animation-duration: 1.5s;
  max-width: 600px;
}

.fade-in-top {
  position: absolute;;
  z-index: 1;
  width: 70%;
  margin: auto;
  max-width: 900px;
  -webkit-animation:fadeIn ease-in 1;
  -moz-animation:fadeIn ease-in 1;
  animation:fadeIn ease-in 1;
  -webkit-animation-fill-mode:forwards;
  animation-fill-mode:forwards;
  -webkit-animation-duration:3.5s;
  -moz-animation-duration:3.5s;
  animation-duration:3.5s;
}

